[package]
name = "arduino_pac_app"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
panic-halt = "1.0.0"
volatile-register = "0.2.2"
ra4m1 = { version = "0.2.1", git = "https://github.com/ra-rs/ra" }

[[bin]]
name = "arduino_pac_app"
test = false
bench = false
